# mcp-memory-server

./: .gitignore  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  PROJECT_SUMMARY.md  README.md  pyproject.toml
.claude/agents/: implementer.md  linguist.md  researcher.md  reviewer.md  reward-tuner.md
.github/workflows/: ci.yml
data/prompts/: topics.json
data/raw/episodes/: episodes_20260226_082144.json
docs/: ARCHITECTURE.md  BLOG_POST.md
scripts/: 01_setup_check.py  02_generate_episodes.py  02b_convert_public_data.py  03_compute_rewards.py  04_build_dataset.py  05_validate_quality.py  06_visualize_stats.py  07_precompute_embeddings.py  07_sleep_cycle.py  08_convergence_benchmark.py  08_train_dqn.py  09_evaluate_dqn.py  check_distribution.py  install.sh  install_openclaw.sh  tools_content.md
src/aimemory/: __init__.py  config.py  schemas.py  setup_client.py  visualize.py
src/aimemory/dataset/: __init__.py  builder.py  splitter.py  stats.py
src/aimemory/extractor/: __init__.py  dataset.py  encoder.py  model.py  policy.py  trainer.py
src/aimemory/i18n/: __init__.py  en.py  ko.py
src/aimemory/live_graph/: __init__.py  events.py  notify.py  server.py
src/aimemory/live_graph/static/: index.html
src/aimemory/mcp/: __init__.py  __main__.py  bridge.py  server.py
src/aimemory/memory/: __init__.py  composer.py  consolidation.py  conversation_log.py  extraction.py  forgetting.py  graph_retriever.py  graph_store.py  knowledge_graph.py  resolution.py  sleep_cycle.py
src/aimemory/online/: __init__.py  ab_comparator.py  autonomy.py  enhanced_encoder.py  enhanced_policy.py  gossip.py  policy.py  replay_buffer.py  reranker.py  rule_verifier.py  transport.py
src/aimemory/reward/: __init__.py  calculator.py  feedback_detector.py  implicit_detector.py  korean_patterns.py  signals.py
src/aimemory/selfplay/: __init__.py  engine.py  llm_client.py  memory_agent.py  scenarios.py
src/aimemory/setup_instructions/: claude.md  openclaw_extension.ts  openclaw_soul.md  openclaw_tools.md
tests/: conftest.py  test_ab_comparator.py  test_autonomy.py  test_composer.py  test_dataset_builder.py  test_e2e_enhanced.py  test_enhanced_encoder.py  test_enhanced_policy.py  test_extractor.py  test_feedback_detector.py  test_forgetting.py  test_gossip.py  test_graph_retriever.py  test_graph_store.py  test_i18n.py  test_implicit_detector.py  test_knowledge_graph.py  test_mcp_bridge.py  test_mcp_e2e.py  test_mcp_server.py  test_online_policy.py  test_replay_buffer.py  test_reranker.py  test_resolution.py  test_reward_calculator.py  test_rule_verifier.py  test_schemas.py  test_selfplay_engine.py  test_sleep_cycle.py  test_transport.py  test_visualize.py
