[project]
name = "aimemory"
version = "0.1.0"
description = "AI Memory System - Intelligent memory management MCP server"
requires-python = ">=3.11,<3.14"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0",
    "mcp[cli]>=1.2.0",
]

[project.optional-dependencies]
ko = [
    "mecab-python3>=1.0.9",
    "mecab-ko-dic>=1.0.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
train = [
    "ollama>=0.4.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "tqdm>=4.66",
    "matplotlib>=3.8",
]

[project.scripts]
aimemory-mcp = "aimemory.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aimemory"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
