[project]
name = "mcp-memory-server"
version = "0.2.0"
description = "Intelligent memory MCP server for AI assistants — auto-save, semantic search, RL-powered retrieval, and knowledge graphs"
requires-python = ">=3.11,<3.14"
license = "MIT"
authors = [
    { name = "ihwoo" },
]
keywords = ["ai", "memory", "mcp", "llm", "chatbot", "claude", "rag", "knowledge-graph", "reinforcement-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"
dependencies = [
    "pydantic>=2.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0",
    "mcp[cli]>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/ihwooMil/mcp-memory-server"
Repository = "https://github.com/ihwooMil/mcp-memory-server"
Issues = "https://github.com/ihwooMil/mcp-memory-server/issues"
Changelog = "https://github.com/ihwooMil/mcp-memory-server/blob/main/CHANGELOG.md"

[project.optional-dependencies]
ko = [
    "mecab-python3>=1.0.9",
    "mecab-ko-dic>=1.0.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
train = [
    "ollama>=0.4.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "tqdm>=4.66",
    "matplotlib>=3.8",
]

[project.scripts]
aimemory-mcp = "aimemory.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aimemory"]

[tool.hatch.build.targets.sdist]
exclude = [
    "data/",
    "dist/",
    "scripts/",
    "tests/",
    "checkpoints/",
    "memory_db/",
    ".claude/",
    ".github/",
    "*.pyc",
    "__pycache__/",
    ".DS_Store",
    "uv.lock",
    "IMPLEMENTATION_PLAN.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
