[project]
name = "long-term-memory"
version = "0.4.2"
description = "Long-term memory system for AI assistants — persistent, searchable, self-organizing memory powered by semantic search, knowledge graphs, and reinforcement learning"
requires-python = ">=3.11,<3.14"
license = "MIT"
authors = [
    { name = "ihwoo" },
]
keywords = ["ai", "memory", "mcp", "llm", "long-term-memory", "claude", "rag", "knowledge-graph", "reinforcement-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"
dependencies = [
    "pydantic>=2.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0",
    "mcp[cli]>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/ihwooMil/long-term-memory"
Repository = "https://github.com/ihwooMil/long-term-memory"
Issues = "https://github.com/ihwooMil/long-term-memory/issues"
Changelog = "https://github.com/ihwooMil/long-term-memory/blob/main/CHANGELOG.md"

[project.optional-dependencies]
ko = [
    "mecab-python3>=1.0.9",
    "mecab-ko-dic>=1.0.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
viz = [
    "pyvis>=0.3.2",
]
live = [
    "websockets>=12.0",
]
train = [
    "ollama>=0.4.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "tqdm>=4.66",
    "matplotlib>=3.8",
]

[project.scripts]
aimemory-mcp = "aimemory.mcp.server:main"
aimemory-viz = "aimemory.visualize:main"
aimemory-live = "aimemory.live_graph.server:main"
aimemory-setup = "aimemory.setup_client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aimemory"]

[tool.hatch.build.targets.sdist]
exclude = [
    "data/",
    "dist/",
    "scripts/",
    "tests/",
    "checkpoints/",
    "memory_db/",
    ".claude/",
    ".github/",
    "*.pyc",
    "__pycache__/",
    ".DS_Store",
    "uv.lock",
    "IMPLEMENTATION_PLAN.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
